--- a/k8s/namespaces/azure-devops/kustomization.yaml
+++ b/k8s/namespaces/azure-devops/kustomization.yaml
@@ -4,4 +4,5 @@ namespace: azure-devops
 bases:
 - namespace.yaml
 - azure-devops-agent/azure-devops-agent.yaml
+- azure-devops-agent/secret-store.yaml
 # Warning : Adding a file here, adds to all environments to which you add your kustomization.
