added pod identity references

--- a/k8s/namespaces/azure-devops/azure-devops-agent/patches/sbox/cluster-00/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/patches/sbox/cluster-00/azure-devops-agent.yaml
@@ -6,3 +6,5 @@ metadata:
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.chart-image: glob:v*
+  labels:
+    aadIdentityName: aks-pod-identity-mi
