--- a/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
@@ -31,7 +31,7 @@ spec:
     - name: docker-socket
       hostPath:
         path: /var/run/docker.sock
-    - name: ss-vault-kv-sbox
+    - name: ss-vault-sbox
       csi:
         driver: secrets-store.csi.k8s.io
         readOnly: true
@@ -39,7 +39,7 @@ spec:
           secretProviderClass: azure-devops-agent-sbox-podid
     replicas: 1
     keyvaults:
-    - name: ss-vault-kv-sbox
+    - name: ss-vault-sbox
       resourcegroup: infra-resource-group
       subscriptionid: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
       tenantid: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
