changed chart location

--- a/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
@@ -9,8 +9,8 @@ metadata:
 spec:
   releaseName: azure-devops-agent
   chart:
-    git: git@github.com:hmcts/shared-services-flux
-    path: k8s/charts/azure-devops-agent
+    git: git@github.com:hmcts/sds-helm-charts
+    path: stable/azure-devops-agent
     ref: master
   values:
     image:
