--- a/k8s/release/admin/kured/kured.yaml
+++ b/k8s/release/admin/kured/kured.yaml
@@ -10,13 +10,13 @@ metadata:
 spec:
   releaseName: kured
   chart:
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    repository: https://weaveworks.github.io/kured
     name: kured
-    version: 1.5.0
+    version: 2.2.0
   values:
     image:
       repository: docker.io/weaveworks/kured
-      tag: 1.3.0
+      tag: 1.5.0
       pullSecrets:
   valueFileSecrets:
   - name: "kured-values"
