--- a/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
@@ -28,9 +28,9 @@ spec:
       tls: []
       hosts:
       - 'hmi-pact.sandbox.platform.hmcts.net'
-    aadIdentityName: "flux-sbox-mi-sops"
-    aadResourceId: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/genesis-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/flux-sbox-mi-sops
-    aadClientId: 728277b4-285c-447a-935f-6b7d4e145d8d
+    aadIdentityName: "aks-sbox-mi"
+    aadResourceId: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourceGroups/genesis-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/aks-sbox-mi
+    aadClientId: 09d99cb4-e1e7-49c2-a8e6-b5b1740e9c3b
     postgresql:
       enabled: true
       postgresqlServerName: "hmi-pact-broker-sbox"
