--- a/k8s/release/admin/traefik/patches/dev/cluster-01/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/dev/cluster-01/traefik.yaml
@@ -9,15 +9,12 @@ spec:
   values:
     loadBalancerIP: 10.145.31.250
     dashboard:
-      domain: traefik01.ss-service.core-compute-dev.internal
+      domain: traefik-ss-01.demo.platform.hmcts.net
     accessLogs:
       enabled: true
     autoscaling:
       minReplicas: 1
       maxReplicas: 2
-    ssl:
-      generateTLS: true
-      defaultCN: "*.ss-service.core-compute-dev.internal"
     metrics:
       prometheus:
         enabled: true
