change demo to dev

--- a/k8s/release/admin/traefik/patches/dev/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/dev/cluster-00/traefik.yaml
@@ -7,7 +7,7 @@ spec:
   values:
     loadBalancerIP: 10.145.15.250
     dashboard:
-      domain: traefik-ss-00.demo.platform.hmcts.net
+      domain: traefik-ss-00.dev.platform.hmcts.net
     accessLogs:
       enabled: true
     autoscaling:
