--- a/k8s/release/admin/traefik/patches/dev/cluster-01/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/dev/cluster-01/traefik.yaml
@@ -9,7 +9,7 @@ spec:
   values:
     loadBalancerIP: 10.145.31.250
     dashboard:
-      domain: traefik-ss-01.demo.platform.hmcts.net
+      domain: traefik-ss-01.dev.platform.hmcts.net
     accessLogs:
       enabled: true
     autoscaling:
