change preview > dev

--- a/k8s/environments/dev/common/hmi/hmi-pactbroker.yaml
+++ b/k8s/environments/dev/common/hmi/hmi-pactbroker.yaml
@@ -27,7 +27,7 @@ spec:
         - /
       tls: []
       hosts:
-      - 'hmi-pact.preview.platform.hmcts.net'
+      - 'hmi-pact.dev.platform.hmcts.net'
     aadIdentityName: "aks-dev-mi"
     aadResourceId: /subscriptions/867a878b-cb68-4de5-9741-361ac9e178b6/resourceGroups/genesis-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/aks-dev-mi
     aadClientId: b86d64c4-ec90-451a-ab22-77cea15aeb68
