changed acr to shared

--- a/k8s/release/hmi/hmi-casehqemulator/values.yaml
+++ b/k8s/release/hmi/hmi-casehqemulator/values.yaml
@@ -1,7 +1,7 @@
 # replicas: 1
 
 image:
-  repository: ssprivatesbox.azurecr.io/hmi/case-hq-emulator
+  repository: sdshmctspublic.azurecr.io/hmi/case-hq-emulator
   tag: v0.1
   pullPolicy: Always
 
