--- a/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
+++ b/k8s/environments/sbox/common/hmi/hmi-pactbroker.yaml
@@ -16,7 +16,7 @@ spec:
   values:
     replicas: 1
     image:
-      repository: "ssprivatesbox.azurecr.io/hmi/apim-tests-pact"
+      repository: "sdshmctspublic.azurecr.io/hmi/apim-tests-pact"
       tag: "v0.1"
       pullPolicy: Always
     ingress:
