--- a/k8s/environments/test/common/hmi/hmi-casehqemulator.yaml
+++ b/k8s/environments/test/common/hmi/hmi-casehqemulator.yaml
@@ -16,7 +16,7 @@ spec:
   values:
     replicas: 1
     image:
-      repository: "ssprivatetest.azurecr.io/hmi/case-hq-emulator"
+      repository: "sdshmctspublic.azurecr.io/hmi/case-hq-emulator"
       tag: "v0.1"
       pullPolicy: Always
     ingress:
