--- a/k8s/environments/test/common/hmi/hmi-wiremock.yaml
+++ b/k8s/environments/test/common/hmi/hmi-wiremock.yaml
@@ -16,7 +16,7 @@ spec:
   values:
     replicas: 1
     image:
-      repository: "ssprivatetest.azurecr.io/hmi/apim-tests-wiremock"
+      repository: "sdshmctspublic.azurecr.io/hmi/apim-tests-wiremock"
       tag: "v0.1"
       pullPolicy: Always
     ingress:
