--- a/k8s/release/hmi/hmi-pactbroker/values.yaml
+++ b/k8s/release/hmi/hmi-pactbroker/values.yaml
@@ -1,7 +1,7 @@
 # replicas: 1
 
 image:
-  repository: ssprivatesbox.azurecr.io/hmi/apim-tests-pact
+  repository: sdshmctspublic.azurecr.io/hmi/apim-tests-pact
   tag: v0.1
   pullPolicy: Always
 
