--- a/k8s/release/admin/traefik/patches/dev/cluster-00/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/dev/cluster-00/traefik.yaml
@@ -4,7 +4,12 @@ metadata:
   name: traefik
   namespace: admin
 spec:
+  chart:
+    git: https://github.com/hmcts/charts
+    ref: master
+    path: stable/traefik
   values:
+    imageTag: 1.7.26
     loadBalancerIP: 10.145.15.250
     dashboard:
       domain: traefik-ss-00.dev.platform.hmcts.net
