--- a/k8s/release/admin/traefik/patches/test/cluster-01/traefik.yaml
+++ b/k8s/release/admin/traefik/patches/test/cluster-01/traefik.yaml
@@ -6,7 +6,12 @@ metadata:
 spec:
   # valueFileSecrets:
   #   - name: "traefik-values"
+  chart:
+    git: https://github.com/hmcts/charts
+    ref: master
+    path: stable/traefik
   values:
+    imageTag: 1.7.26
     loadBalancerIP: 10.141.31.250
     dashboard:
       domain: traefik-ss-01.test.platform.hmcts.net
