--- a/k8s/release/admin/traefik/traefik.yaml
+++ b/k8s/release/admin/traefik/traefik.yaml
@@ -11,15 +11,15 @@ spec:
     enable: true
     retry: true
   chart:
-    repository: https://kubernetes-charts.storage.googleapis.com/
-    name: traefik
-    version: 1.87.1
+    git: https://github.com/hmcts/charts
+    ref: master
+    path: stable/traefik
   values:
-    imageTag: 1.7.24
+    imageTag: 1.7.26
     gzip:
       enabled: false
     resources:
-      requests:
+      requests: 
         cpu: 100m
         memory: 20Mi
       limits:
