Testing new Kube-Slack repo location in sbox-00

--- a/k8s/release/admin/kube-slack/patches/sbox/cluster-00/kube-slack.yaml
+++ b/k8s/release/admin/kube-slack/patches/sbox/cluster-00/kube-slack.yaml
@@ -5,6 +5,10 @@ metadata:
   name: kube-slack
   namespace: admin
 spec:
+  chart:
+    git: https://github.com/hmcts/charts
+    ref: master
+    path: stable/kube-slack
   values:
     envVars:
       SLACK_USERNAME: sbox-00-aks
