Changing Kube-Slack chart repo away from stable repo. (DTSPO-177)

--- a/k8s/release/admin/kube-slack/kube-slack.yaml
+++ b/k8s/release/admin/kube-slack/kube-slack.yaml
@@ -9,9 +9,9 @@ metadata:
 spec:
   releaseName: kube-slack
   chart:
-    repository: https://kubernetes-charts.storage.googleapis.com/
-    name: kube-slack
-    version: 1.3.2
+    git: https://github.com/hmcts/charts
+    ref: master
+    path: stable/kube-slack
   valueFileSecrets:
     - name: "kube-slack-values"
   values:
