Attempt to create CSI volumes for secrets instead of flexVolume when using a job template

--- a/k8s/release/mi/mi-integration-service/Chart.yaml
+++ b/k8s/release/mi/mi-integration-service/Chart.yaml
@@ -8,6 +8,6 @@ description: MI integration service
 maintainers:
   - name: HMCTS MI platform
 dependencies:
-   - name: job
+   - name: jobcsi
      version: ~0.5.7
-     repository: 'file://../common/job'
+     repository: 'file://../common/jobcsi'
