--- a/k8s/environments/dev/common/toffee/toffee-recipe-backend.yaml
+++ b/k8s/environments/dev/common/toffee/toffee-recipe-backend.yaml
@@ -11,7 +11,7 @@ spec:
   releaseName: plum-recipe-backend
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    name: plum-recipe-backend
+    name: toffee-recipe-backend
     version: 0.7.2
   values:
     java:
