--- a/k8s/environments/dev/common/toffee/toffee-recipe-backend.yaml
+++ b/k8s/environments/dev/common/toffee/toffee-recipe-backend.yaml
@@ -8,10 +8,10 @@ metadata:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.java: glob:prod-*
 spec:
-  releaseName: plum-recipe-backend
+  releaseName: toffee-recipe-backend
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    name: toffee-recipe-backend
+    name: plum-recipe-backend
     version: 0.7.2
   values:
     java:
