--- a/k8s/environments/dev/common/mi/secrets-store.yaml
+++ b/k8s/environments/dev/common/mi/secrets-store.yaml
@@ -1,7 +1,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
-  name: mi-vault-dev-secret-store
+  name: mi-vault-dev-secret
 spec:
   provider: azure
   parameters:
