--- a/k8s/environments/dev/common/toffee/toffee-recipe-backend.yaml
+++ b/k8s/environments/dev/common/toffee/toffee-recipe-backend.yaml
@@ -17,7 +17,7 @@ spec:
     java:
       image: hmctspublic.azurecr.io/plum/recipe-backend:prod-d46d23a5
       ingressHost: toffee-recipe-backend.dev.platform.hmcts.net
-      aadIdentityName: aks-pod-identity-mi
+      aadIdentityName: aks-dev-mi
       environment:
         POSTGRES_SSL_MODE: require
       keyVaults:
