MI add dummy change

--- a/k8s/environments/stg/common/mi/mi-extraction-service.yaml
+++ b/k8s/environments/stg/common/mi/mi-extraction-service.yaml
@@ -41,6 +41,7 @@ spec:
         SFTP_FORCECHECK: true
         SFTP_REMOTE_HOST: staging.hmcts.cloudgateway.co.uk
         SFTP_REMOTE_PORT: 22
+        DUMMY: dummy
         SFTP_REMOTE_FOLDER: files/mi-platform-export/
       smoketests:
         image: ssprivatestg.azurecr.io/mi-extraction-service:stg-4e34a11
