--- a/k8s/environments/sbox/common/toffee/toffee-recipe-backend.yaml
+++ b/k8s/environments/sbox/common/toffee/toffee-recipe-backend.yaml
@@ -3,10 +3,10 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: toffee-recipe-backend
-  namespace: sds
+  namespace: toffee
   annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    fluxcd.io/automated: "true"
+    filter.fluxcd.io/java: glob:prod-*
 spec:
   releaseName: toffee-recipe-backend
   chart:
@@ -22,7 +22,6 @@ spec:
         POSTGRES_SSL_MODE: require
       keyVaults:
         "toffee-vault-sbox":
-          resourceGroup: toffee-sbox-rg
           secrets:
           - recipe-backend-POSTGRES-DATABASE
           - recipe-backend-POSTGRES-HOST
@@ -30,6 +29,5 @@ spec:
           - recipe-backend-POSTGRES-PASS
     global:
       environment: sbox
-      subscriptionId: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
