--- a/k8s/release/mi/common/job/templates/secretprovider.yaml
+++ b/k8s/release/mi/common/job/templates/secretprovider.yaml
@@ -4,7 +4,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
-  name: "mi-vault-{{ $globals.environment }}-secret"
+  name: "{{ .Values.aadIdentityName }}-vault-{{ $globals.environment }}-secret-provider"
 spec:
   provider: azure
   parameters:
