Add dummy change

--- a/k8s/environments/stg/common/mi/mi-extraction-service.yaml
+++ b/k8s/environments/stg/common/mi/mi-extraction-service.yaml
@@ -62,6 +62,7 @@ spec:
           SFTP_REMOTE_PORT: 22
           SFTP_REMOTE_FOLDER: files/mi-platform-export/
           SFTP_FORCECHECK: true
+          DUMMY: false
 
     global:
       subscriptionId: "74dacd4f-a248-45bb-a2f0-af700dc4cf68"
