Refactor secretProvider for consistency

--- a/k8s/release/mi/common/job/templates/secretprovider.yaml
+++ b/k8s/release/mi/common/job/templates/secretprovider.yaml
@@ -1,10 +1,11 @@
 {{- if .Values.keyVaults }}
+{{- $aadIdentityName := .Values.aadIdentityName }}
 {{- $globals := .Values.global }}
 ---
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
-  name: "{{ .Values.aadIdentityName }}-vault-{{ $globals.environment }}-secret-provider"
+  name: "{{ $aadIdentityName }}-vault-{{ $globals.environment }}-secret-provider"
 spec:
   provider: azure
   parameters:
