MI use ip address for sftp server

--- a/k8s/environments/stg/common/mi/mi-extraction-service.yaml
+++ b/k8s/environments/stg/common/mi/mi-extraction-service.yaml
@@ -39,7 +39,7 @@ spec:
         MI_CLIENT_ID: "88d54b96-2be6-4fb5-b966-7d98111152d8"
         SFTP_ENABLED: false
         SFTP_FORCECHECK: true
-        SFTP_REMOTE_HOST: staging.hmcts.cloudgateway.co.uk
+        SFTP_REMOTE_HOST: 10.24.254.130
         SFTP_REMOTE_PORT: 22
         SFTP_REMOTE_FOLDER: files/mi-platform-export/
       smoketests:
@@ -58,7 +58,7 @@ spec:
           APPINSIGHTS_INSTRUMENTATIONKEY: "482eb1b8-a656-41e6-b2e8-8351d7986b2c"
           MI_CLIENT_ID: "88d54b96-2be6-4fb5-b966-7d98111152d8"
           SFTP_ENABLED: false
-          SFTP_REMOTE_HOST: staging.hmcts.cloudgateway.co.uk
+          SFTP_REMOTE_HOST: 10.24.254.130
           SFTP_REMOTE_PORT: 22
           SFTP_REMOTE_FOLDER: files/mi-platform-export/
           SFTP_FORCECHECK: true
