--- a/k8s/release/mi/common/job/templates/secretprovider.yaml
+++ b/k8s/release/mi/common/job/templates/secretprovider.yaml
@@ -1,11 +1,10 @@
 {{- if .Values.keyVaults }}
 {{- $globals := .Values.global }}
-{{- $aadIdentityName := .Values.aadIdentityName }}
 ---
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
-  name: "{{ $aadIdentityName }}-vault-{{ $globals.environment }}-secret-provider"
+  name: "{{ include "hmcts.releaseName" . }}-vault-{{ $globals.environment }}-secret-provider"
 spec:
   provider: azure
   parameters:
