DTSPO-161 - cleaning up & setting everything back to sbox

--- a/k8s/environments/sbox/common-overlay/toffee/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/toffee/kustomization.yaml
@@ -17,7 +17,7 @@ patches:
     - op: replace
       path: /spec/values/java/keyVaults
       value:
-        "toffee-vault-test":
+        "toffee-vault-sbox":
           secrets:
           - recipe-backend-POSTGRES-DATABASE
           - recipe-backend-POSTGRES-HOST
