uncommented bases and patches

--- a/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/sbox/cluster-00-overlay/kustomization.yaml
@@ -13,7 +13,7 @@ bases:
 patchesStrategicMerge:
 
 #kube-slack patch
-- ../../../release/admin/kube-slack/patches/sbox/cluster-00/kube-slack.yaml
+- ../../../release/admin/kube-slack/patches/sbox/cluster-00/kube-slack.yamlß
 
 #traefik patch
 - ../../../release/admin/traefik/patches/sbox/cluster-00/traefik.yaml
