--- a/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
@@ -9,34 +9,29 @@ metadata:
 spec:
   releaseName: azure-devops-agent
   chart:
-    git: git@github.com:hmcts/sds-helm-charts
-    path: stable/azure-devops-agent
-    ref: master
+    repository: https://hmctspublic.azurecr.io/helm/v1/repo/
+    name: azure-devops-agent
+    version: 0.1.0
   values:
     image:
       repository: "hmctspublic.azurecr.io/hmcts/vsts-agent"
-      tag: "db7emv"
-    env:
-      AZP_URL: "https://dev.azure.com/hmcts"
-      AZP_POOL: "hmcts-ss-sandbox"
-      AZP_WORK: "_work"
-    volumeMounts:
-    - name: ss-vault-sbox
-      readOnly: true
-      mountPath: /kvmnt
-    volumes:
-    - name: ss-vault-sbox
-      csi:
-        driver: secrets-store.csi.k8s.io
-        readOnly: true
-        volumeAttributes:
-          secretProviderClass: azure-devops-agent-sbox-podid
+      tag: "db7stq"
+    aadIdentity:
+      name: azure-devops-agent
+      type: 0
+      resourceId: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourcegroups/genesis-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/aks-sbox-mi
+      clientId: 09d99cb4-e1e7-49c2-a8e6-b5b1740e9c3b
+    azureDevOps:
+      url: https://dev.azure.com/hmcts
+      pool: hmcts-ss-sandbox
+      agentName: shared-services-aks-agent
     replicas: 1
-    keyvaults:
-    - name: ss-vault-sbox
-      resourcegroup: infra-resource-group
-      subscriptionid: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
-      tenantid: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+    keyVaults:
+    - name: dtssharedservicessboxkv
+      resourceGroup: genesis-rg
+      subscriptionId: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
+      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       secrets:
-      - azure-devops-agent-secret
+      - azpToken
+
     
