--- a/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
@@ -32,6 +32,6 @@ spec:
       subscriptionId: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       secrets:
-      - azpToken
+      - azure-devops-agent-token
 
     
