--- a/k8s/namespaces/azure-devops/kustomization.yaml
+++ b/k8s/namespaces/azure-devops/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: azure-devops
 bases:
-- namespace.yaml
+- azure-devops.yaml
 - azure-devops-agent/azure-devops-agent.yaml
 # Warning : Adding a file here, adds to all environments to which you add your kustomization.
