--- a/k8s/namespaces/azure-devops/azure-devops-agent/patches/sbox/cluster-01/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/patches/sbox/cluster-01/azure-devops-agent.yaml
@@ -12,6 +12,7 @@ spec:
     aadIdentity:
       resourceId: /subscriptions/a8140a9e-f1b0-481f-a4de-09e2ee23f7ab/resourcegroups/genesis-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/aks-sbox-mi
       clientId: 09d99cb4-e1e7-49c2-a8e6-b5b1740e9c3b
+    azureDevOps:
+      pool: hmcts-ss-sandbox
     keyVaults:
     - name: dtssharedservicessboxkv
-      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
