--- a/k8s/namespaces/azure-devops/azure-devops-agent/patches/sbox/cluster-00/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/patches/sbox/cluster-00/azure-devops-agent.yaml
@@ -16,3 +16,6 @@ spec:
       pool: hmcts-ss-sandbox
     keyVaults:
     - name: dtssharedservicessboxkv
+      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+      secrets:
+      - azure-devops-agent-token    
