--- a/k8s/namespaces/toffee/toffee-backend/toffee-recipe-backend.yaml
+++ b/k8s/namespaces/toffee/toffee-backend/toffee-recipe-backend.yaml
@@ -17,7 +17,7 @@ spec:
     java:
       image: hmctspublic.azurecr.io/plum/recipe-backend:prod-28676739
       ingressHost: toffee-recipe-backend.{{ .Values.global.environment }}.platform.hmcts.net
-      aadIdentityName: aks-{{ .Values.global.environment }}-mi
+      aadIdentityName: toffee-{{ .Values.global.environment }}-mi
       # Making this default in helm chart, will remove this once it is done.
       # environment:
       #   POSTGRES_SSL_MODE: require
