--- a/k8s/namespaces/toffee/toffee-backend/toffee-recipe-backend.yaml
+++ b/k8s/namespaces/toffee/toffee-backend/toffee-recipe-backend.yaml
@@ -12,16 +12,20 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: plum-recipe-backend
-    version: 0.8.0
+    version: 0.8.1
   values:
     java:
       image: hmctspublic.azurecr.io/plum/recipe-backend:prod-28676739
       ingressHost: toffee-recipe-backend.{{ .Values.global.environment }}.platform.hmcts.net
       aadIdentityName: toffee-{{ .Values.global.environment }}-mi
       keyVaults:
-        "toffee-{{ .Values.global.environment }}":
+        toffee:
           secrets:
           - recipe-backend-POSTGRES-PASS
+      environment:
+        POSTGRES_HOST: "toffee-{{ .Values.global.environment }}.postgres.database.azure.com"
+        POSTGRES_DATABASE: "toffee"
+        POSTGRES_USER: "toffeeadmin@toffee-{{ .Values.global.environment }}"
     global:
       environment: replace
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
