--- a/k8s/environments/sbox/common-overlay/toffee/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/toffee/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-bases:
+resources:
 - ../../../../namespaces/toffee
 
 patches:
@@ -13,4 +13,9 @@ patches:
     - op: replace
       path: /spec/values/global/environment
       value: sbox
-
+- target:
+    group: aadpodidentity.k8s.io
+    version: v1
+    kind: AzureIdentity
+    name: toffee
+  path: azure-identity-patch.yaml
