DTSPO-161 - move patches from in-line to a patch file

--- a/k8s/environments/sbox/common-overlay/toffee/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/toffee/kustomization.yaml
@@ -9,19 +9,7 @@ patches:
     version: v1
     kind: HelmRelease
     name: toffee-recipe-backend
-  patch: |-
-    - op: replace
-      path: /spec/values/global/environment
-      value: sbox
-- target:
-    group: helm.fluxcd.io
-    version: v1
-    kind: HelmRelease
-    name: toffee-recipe-backend
-  patch: |-
-    - op: replace
-      path: /spec/values/java/ingressHost
-      value: toffee-backend.staging.platform.hmcts.net
+  path: backend-patch.yaml
 - target:
     group: aadpodidentity.k8s.io
     version: v1
