--- a/k8s/environments/sbox/common-overlay/toffee/kustomization.yaml
+++ b/k8s/environments/sbox/common-overlay/toffee/kustomization.yaml
@@ -16,3 +16,9 @@ patches:
     kind: AzureIdentity
     name: toffee
   path: azure-identity-patch.yaml
+- target:
+    group: helm.fluxcd.io
+    version: v1
+    kind: HelmRelease
+    name: toffee-frontend
+  path: frontend-patch.yaml
