--- a/k8s/namespaces/toffee/kustomization.yaml
+++ b/k8s/namespaces/toffee/kustomization.yaml
@@ -6,3 +6,5 @@ resources:
 - toffee-backend/toffee-recipe-backend.yaml
 - toffee-backend/toffee-azure-identity-binding.yaml
 - toffee-backend/toffee-azure-identity.yaml
+- toffee-frontend/toffee-frontend.yaml
+
