--- a/k8s/namespaces/toffee/toffee-frontend/toffee-frontend.yaml
+++ b/k8s/namespaces/toffee/toffee-frontend/toffee-frontend.yaml
@@ -4,8 +4,8 @@ metadata:
   name: toffee-frontend
   namespace: toffee 
   annotations:
-    flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: glob:prod-*
+    fluxcd.io/automated: "true"
+    filter.fluxcd.io/tag.nodejs: glob:prod-*
 spec:
   releaseName: toffee-frontend
   chart:
@@ -15,6 +15,6 @@ spec:
   values:
     nodejs:
       image: hmctspublic.azurecr.io/plum/frontend:prod-41c16310
-      ingressHost: toffee.sandbox.platform.hmcts.net
+      ingressHost: toffee.{{ .Values.global.environment }}.platform.hmcts.net
       environment:
         RECIPE_BACKEND_URL: http://toffee-recipe-backend-java
