small change to test auto deploy

--- a/k8s/stg/releases/juror-digital/jd-bureau.yaml
+++ b/k8s/stg/releases/juror-digital/jd-bureau.yaml
@@ -35,7 +35,7 @@ spec:
       paths:
         - /
       tls: []
-      #  - secretName: chart-example-tls
+      ##  - secretName: chart-example-tls
       #    hosts:
       #      - chart-example.local
       hosts:
