--- a/k8s/stg/releases/juror-digital/jd-public.yaml
+++ b/k8s/stg/releases/juror-digital/jd-public.yaml
@@ -36,7 +36,7 @@ spec:
       paths:
         - /
       tls: []
-      #  - secretName: chart-example-tls
+      ##  - secretName: chart-example-tls
       #    hosts:
       #      - chart-example.local
       hosts:
