--- a/k8s/environments/stg/common/mi/mi-staging-service.yaml
+++ b/k8s/environments/stg/common/mi/mi-staging-service.yaml
@@ -28,13 +28,13 @@ spec:
         app.kubernetes.io/name: mi-staging-service
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "482eb1b8-a656-41e6-b2e8-8351d7986b2c"
-        MI_CLIENT_ID: "f2fc6615-2c11-4c77-a5f2-6674327e8435"
+        MI_CLIENT_ID: f2fc6615-2c11-4c77-a5f2-6674327e8435
       smoketests:
         image: ssprivatestg.azurecr.io/mi-staging-service:stg-5852b60
         enabled: true
       testsConfig:
         environment:
-          MI_CLIENT_ID: "f2fc6615-2c11-4c77-a5f2-6674327e8435"
+          MI_CLIENT_ID: f2fc6615-2c11-4c77-a5f2-6674327e8435
           APPINSIGHTS_INSTRUMENTATIONKEY: "482eb1b8-a656-41e6-b2e8-8351d7986b2c"
     global:
       subscriptionId: "74dacd4f-a248-45bb-a2f0-af700dc4cf68"
