--- a/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
+++ b/k8s/namespaces/azure-devops/azure-devops-agent/azure-devops-agent.yaml
@@ -23,7 +23,7 @@ spec:
       clientId: 09d99cb4-e1e7-49c2-a8e6-b5b1740e9c3b
     azureDevOps:
       url: https://dev.azure.com/hmcts
-      pool: hmcts-ss-sandbox
+      pool: hmcts-ss-sbox
     replicas: 1
     keyVaults:
     - name: dtssharedservicessboxkv
