--- a/k8s/environments/sbox/common/mi/mi-extraction-service.yaml
+++ b/k8s/environments/sbox/common/mi/mi-extraction-service.yaml
@@ -24,7 +24,7 @@ spec:
         app.kubernetes.io/name: mi-extraction-service
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "c3043e63-3383-4add-a507-e0adf8588e4a"
-        MI_CLIENT_ID: "db443ca1-3af8-4196-86e7-e0b666627fe5"
+        MI_CLIENT_ID: 6818a9a6-f1db-4952-a8e6-b8b85275f3f0
     global:
       subscriptionId: "a8140a9e-f1b0-481f-a4de-09e2ee23f7ab"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
