--- a/k8s/environments/test/common/mi/mi-extraction-service.yaml
+++ b/k8s/environments/test/common/mi/mi-extraction-service.yaml
@@ -38,7 +38,7 @@ spec:
           - encryption-publicKey
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
-        MI_CLIENT_ID: "58ed3fc0-18be-4a6f-8ceb-14768c8e796a"
+        MI_CLIENT_ID: d726bc2d-fa66-49be-9425-b7cc13c0a8c2
         SFTP_ENABLED: true
         SFTP_REMOTE_HOST: mi-sftp-server-svc
         SFTP_REMOTE_PORT: 2000
@@ -61,7 +61,7 @@ spec:
             - encryption-publicKey
         environment:
           APPINSIGHTS_INSTRUMENTATIONKEY: "350a1a4c-d746-4c63-814c-4fee92e6e07c"
-          MI_CLIENT_ID: "58ed3fc0-18be-4a6f-8ceb-14768c8e796a"
+          MI_CLIENT_ID: d726bc2d-fa66-49be-9425-b7cc13c0a8c2
           SFTP_ENABLED: true
           SFTP_REMOTE_HOST: mi-sftp-server-svc
           SFTP_REMOTE_PORT: 2000
