--- a/k8s/environments/dev/common/maintenance/maintenance.yaml
+++ b/k8s/environments/dev/common/maintenance/maintenance.yaml
@@ -14,7 +14,7 @@ spec:
     path: k8s/release/maintenance
     ref: master
   values:
-    image: ssprivatedev.azurecr.io/maintenance:v0.1
+    image: sdshmctspublic.azurecr.io/maintenance
     replicaCount: 1
     ingress:
       annotations:
