--- a/k8s/release/vh/vh-user-api/values.yaml
+++ b/k8s/release/vh/vh-user-api/values.yaml
@@ -2,6 +2,7 @@ replicaCount: 1
 
 image:
  repository: sdshmctspublic.azurecr.io/vh/vh-user-api
+  tag: v0.1
  pullPolicy: Always
 
 nameOverride: ""
