fixed missing value:

--- a/k8s/release/vh/vh-user-api/values.yaml
+++ b/k8s/release/vh/vh-user-api/values.yaml
@@ -12,14 +12,14 @@ service:
   type: ClusterIP
   port: 80
 
-# ingress:
-#  enabled: true
-#  annotations:
-#    kubernetes.io/ingress.class: traefik-dev
-#  paths:
-#    - /
-#  tls: []
-#   #  - secretName: chart-example-tls
+ingress:
+ enabled: true
+ annotations:
+   kubernetes.io/ingress.class: traefik-dev
+ paths:
+   - /
+ tls: []
+  #  - secretName: chart-example-tls
 
 env: {}
 
