--- a/k8s/environments/dev/common/video-hearings/az-devops-agent.yaml
+++ b/k8s/environments/dev/common/video-hearings/az-devops-agent.yaml
@@ -18,6 +18,6 @@ spec:
       repository: "sdshmctspublic.azurecr.io/hmi/azure-devops-agent"
       tag: "v0.1"
     env:
-      AZP_URL: "https://dev.azure.com/hmcts"
-      AZP_POOL: "vh-dev"
+      AZP_URL: "https://hmctsreform.visualstudio.com/"
+      AZP_POOL: "vh-sds"
       AZP_WORK: "_work"
