--- a/k8s/release/vh/vh-user-api/values.yaml
+++ b/k8s/release/vh/vh-user-api/values.yaml
@@ -1,9 +1,9 @@
 #replicaCount: 1
 
-
-repository: sdshmctspublic.azurecr.io/vh/vh-user-api
-tag: v0.1
-pullPolicy: Always
+image:
+  repository: sdshmctspublic.azurecr.io/vh/vh-user-api
+  tag: v0.1
+  pullPolicy: Always
 
 nameOverride: ""
 fullnameOverride: ""
@@ -13,12 +13,12 @@ service:
   port: 80
 
 ingress:
- enabled: true
- annotations:
-   kubernetes.io/ingress.class: traefik-dev
- paths:
-   - /
- tls: []
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: traefik-dev
+  paths:
+    - /
+  tls: []
   #  - secretName: chart-example-tls
 
 env: {}
