simplifying to get working first

--- a/k8s/release/vh/vh-user-api/Chart.yaml
+++ b/k8s/release/vh/vh-user-api/Chart.yaml
@@ -1,6 +1,9 @@
-name: vh-user-api
 apiVersion: v2
-version: 0.0.1
+name: vh-user-api
 description: Video Hearing
+type: application
+version: 0.0.1
+appVersion: 1.0.0
+
 maintainers:
   - name: HMCTS VH
