--- a/k8s/release/vh/vh-user-api/templates/service.yaml
+++ b/k8s/release/vh/vh-user-api/templates/service.yaml
@@ -1,26 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ include "vh-user-api.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "vh-user-api.name" . }}
-    app: {{ include "vh-user-api.name" . }}
-    helm.sh/chart: {{ include "vh-user-api.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-  annotations:
-  {{- if .Values.service }}
-  {{- range $key, $value := .Values.service.annotations }}
-    {{ $key }}: {{ $value }}
-  {{- end }}
-  {{- end }}
+    {{- include "vh-user-api.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.port }}
+      targetPort: http
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "vh-user-api.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "vh-user-api.selectorLabels" . | nindent 4 }}
