--- a/k8s/release/vh/vh-user-api/values.yaml
+++ b/k8s/release/vh/vh-user-api/values.yaml
@@ -1,10 +1,16 @@
-#replicaCount: 1
+# Default values for vh-user-api.
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
+
+replicaCount: 1
 
 image:
   repository: sdshmctspublic.azurecr.io/vh/vh-user-api
-  tag: v0.1
   pullPolicy: Always
+  # Overrides the image tag whose default is the chart version.
+  tag: "v0.1"
 
+imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
@@ -13,15 +19,17 @@ service:
   port: 80
 
 ingress:
-  enabled: true
-  annotations:
-    kubernetes.io/ingress.class: traefik-dev
-  paths:
-    - /
+  enabled: false
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: chart-example.local
+      paths: []
   tls: []
   #  - secretName: chart-example-tls
-
-env: {}
+  #    hosts:
+  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -29,15 +37,14 @@ resources: {}
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
+  #   cpu: 100m
+  #   memory: 128Mi
   # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+  #   cpu: 100m
+  #   memory: 128Mi
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
-
