--- a/k8s/release/vh/vh-user-api/values.yaml
+++ b/k8s/release/vh/vh-user-api/values.yaml
@@ -24,7 +24,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: 'vh-user-api-dev.platform.hmcts.net'
       paths: []
   tls: []
   #  - secretName: chart-example-tls
