--- a/k8s/release/vh/vh-user-api/values.yaml
+++ b/k8s/release/vh/vh-user-api/values.yaml
@@ -23,6 +23,7 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+  paths: []
   hosts:
     - host: 'vh-user-api-dev.platform.hmcts.net'
       # paths: []
