--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- $imagerepo := .Values.image.repository -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,7 +17,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"          
+          image: "$imagerepo:{{ .Values.image.tag | default .Chart.AppVersion }}"          
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
