--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -15,9 +15,10 @@ spec:
     ref: master
   values:
     replicas: 2
-    image: sdshmctspublic.azurecr.io/vh/vh-user-api
-    tag: "v0.1"
-    pullPolicy: Always
+    image: 
+      repository: sdshmctspublic.azurecr.io/vh/vh-user-api
+      tag: "v0.1"
+      pullPolicy: Always
     service:
       type: ClusterIP
       port: 80
