--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "$imagerepo:{{ .Values.image.tag | default .Chart.AppVersion }}"          
+          image: "{{ $imagerepo }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
